--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -1,12 +1,16 @@
-{{ partial "header.html" . }}
+{{ partial "head.html" . }}
 <body lang="{{ .Site.LanguageCode }}">
-  {{ $baseurl := .Site.BaseURL }}
-  <a href="{{ .Site.BaseURL  }}">{{ .Site.Title }}</a>
-  <h1>{{ .Title }}</h1>
-  {{ with .Params.new_website }}
-  <p id="new_website">The project is now hosted here: <a href="{{ . }}">{{ . }}</a></p>
-  {{ end }}
-  {{ .Content }}
+  {{ partial "header.html" . }}
+
+  <div id="ocamlcore_content">
+    <h1>{{ .Title }}</h1>
+    {{ with .Params.new_website }}
+      <div class="important">
+        The project is now hosted here: <a href="{{ . }}">{{ . }}</a>
+      </div>
+    {{ end }}
+    {{ .Content }}
+  </div>
+
   {{ partial "footer.html" . }}
-  </body>
-</html>
+</body>
